--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <h1 class="text-center">Proyecto Base de datos</h1>
+    <h1 class="text-center">Chart JS</h1>
     <div class="container pt-10">
         <div class="row">
             <div class="col-6">
-                <h2 class="text-center">Nombre de cada producto y el total en 10 años</h2>
+                <h2 class="text-center">Pregunta Uno</h2>
                 <canvas id="circular" height="400px"></canvas>
             </div>
             <div class="col-6">
