--- a/App/Pages/index.html
+++ b/App/Pages/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../Apis/graficos.js"></script>
+    <script src="../Apis/graficos.js" type="module"></script>
 </body>
 
 </html>
